Fix: Properly aligned hour column the correct way

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -26,7 +26,6 @@ textarea{
 }
 
 .time-block{
-  flex-grow: 1;
   text-align: center;
   border-radius: 15px;
 }
@@ -41,7 +40,9 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
-  padding-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .past {
